Bug 1732479 - Update libcubeb to 8ef5a1ff.  r=cubeb-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D128111